2007-08-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* VSSaxDriver.m ([VSSaxDriver
	-parseFromSource:_sourcesystemId:_sysId]): report only tags for
	which the content is not empty.

2007-05-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* VSSaxDriver.m ([VSSaxDriver +initialize]): removed the space
	character from the colonAndSemicolonCharSet and
	colonSemicolonAndDquoteCharSet so that fields which contain
	attributes with values containing spaces don't get cut.

2006-07-04  Helge Hess  <helge.hess@opengroupware.org>

	* use %p for pointer formats, fixed gcc 4.1 warnings (v4.5.24)

2006-04-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GNUmakefile: properly declare principal class (v4.5.23)

2006-04-08  Marcus Mueller  <znek@mulle-kybernetik.com>

	* VSSaxDriver.m: improved error reporting in case no data could be
	  retrieved from a URL (v4.5.22)
	
2005-12-05  Helge Hess  <helge.hess@skyrix.com>

	* v4.5.21

	* VSSaxDriver.m: added some debug logs, throw an error if a tagline
	  starts with a colon/semicolon (tagname missing)

	* VSvCardSaxDriver.m: minor code cleanups

2005-11-17  Helge Hess  <helge.hess@opengroupware.org>

	* VSSaxDriver.m: renamed internal -error: method to -reportError: to
	  avoid a conflict with gstep-base (v4.5.20)

2005-09-28  Helge Hess  <helge.hess@opengroupware.org>

	* GNUmakefile.preamble: install bundle in proper SaxObjC framework
	  location (v4.5.19)

2005-08-16  Helge Hess  <helge.hess@opengroupware.org>

	* install into /Library/SaxDrivers-4.5 when compiling for frameworks
	  (v4.5.18)

	* GNUmakefile.preamble: added support for OSX frameworks (v4.5.17)

2005-06-02  Helge Hess  <helge.hess@skyrix.com>
	
	* VSSaxDriver.m: transparently decode property values if
	  ENCODING=QUOTED-PRINTABLE is set as an attribute (used by Outlook
	  vCards, needs testing against umlauts/charsets) (v4.5.16)

2005-05-06  Helge Hess  <helge.hess@opengroupware.org>

	* VSSaxDriver.m: more reorganisations, added support for groupings